# korra

./: README.md
korra/: package-lock.json  package.json  tsconfig.json
korra/c/core/: thread.c
korra/c/include/: debug.h  rust_glue.h  thread.h  transport.h
korra/c/interop/: rust_glue.c
korra/c/net/: transport.c
korra/c/tools/: debug.c
korra/java/: pom.xml
korra/java/src/main/java/korra/api/: AdminInterface.java  JsonSerializer.java
korra/java/src/main/java/korra/core/: Coordinator.java  Job.java  JobStatus.java  NodeInfo.java  NodeStatus.java
korra/java/src/main/java/korra/crypto/: ExecutionProof.java  ProofValidator.java  ValidationResult.java
korra/java/src/main/java/korra/main/: KorraApp.java
korra/java/src/main/java/korra/protocol/: NodeSync.java
korra/java/src/main/java/korra/registry/: AgentDefinition.java  AgentRegistry.java  AgentStatus.java  AgentType.java  AgentVersion.java
korra/java/src/main/java/korra/router/: JobRouter.java
korra/java/src/main/java/korra/storage/: Snapshot.java  SnapshotStore.java
korra/rust/: Cargo.toml
korra/rust/src/: lib.rs
korra/rust/src/engine/: agent.rs
korra/rust/src/interop/: c_bridge.rs
korra/rust/src/sandbox/: wasm_host.rs
korra/rust/src/state/: core.rs
korra/rust/src/validator/: consensus.rs
korra/rust/src/verifier/: proof.rs
korra/ts/cli/: init.ts  korra.ts
korra/ts/rpc/: client.ts
korra/ts/scripts/: agentDeploy.ts
korra/ts/tests/: sim.ts
korra/ts/tools/: inspect.ts
